--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "firebase": "^10.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.15.0",
     "sort-by": "^1.2.0",
     "swiper": "^10.2.0"
