--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,9 @@
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.15.0",
+    "react-star-rating-input": "^8.0.1",
+    "react-star-ratings": "^2.3.0",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "swiper": "^10.2.0"
   },
