--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-star-ratings": "^2.3.0",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.4",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
